add in midi-timing library and make function to read file and make markers

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@
 * then your use, modification, or distribution of it requires the prior
 * written permission of Adobe. 
 **************************************************************************/
+.wrapper {
+	color: white;
+}
 
 p {
 	font-family: "LucidaGrande", sans-serif;
